--- a/steamCN.yaml
+++ b/steamCN.yaml
@@ -1,37 +1,7 @@
 payload:
-  # > Steam
-  # - USER-AGENT,Steam*
+  - DOMAIN-SUFFIX,api.steampowered.com
   - DOMAIN-SUFFIX,cm.steampowered.com
-  - DOMAIN,ol.epicgames.com
-  - DOMAIN-SUFFIX,steamcontent.com
   - DOMAIN-SUFFIX,steamserver.net
-
-  - DOMAIN-SUFFIX,steamchina.com
-
-  - DOMAIN,csgo.wmsj.cn
-  - DOMAIN,dota2.wmsj.cn
-  - DOMAIN,wmsjsteam.com
-
-  - DOMAIN,dl.steam.clngaa.com
-  - DOMAIN,dl.steam.ksyna.com
-
-  - DOMAIN,gstore.val.manlaxy.com
-
-  - DOMAIN,st.dl.bscstorage.net
-  - DOMAIN,st.dl.eccdnx.com
-  - DOMAIN,st.dl.pinyuncloud.com
-
-  - DOMAIN,steampipe.steamcontent.tnkjmec.com
-
-  - DOMAIN,steampowered.com.8686c.com
-  - DOMAIN,steamstatic.com.8686c.com
-
-  - DOMAIN,steambroadcast.akamaized.net
-  - DOMAIN,steamcdn-a.akamaihd.net
-  - DOMAIN,steamcommunity-a.akamaihd.net
-  - DOMAIN,steamstore-a.akamaihd.net
-  - DOMAIN,steamusercontent-a.akamaihd.net
-  - DOMAIN,steamuserimages-a.akamaihd.net
   - IP-CIDR,45.121.184.0/24
   - IP-CIDR,103.10.124.0/23
   - IP-CIDR,103.28.54.0/24
